--- a/index.html
+++ b/index.html
@@ -3,22 +3,41 @@
 <html>
 <head>
   <title>Electron React Auth Starter</title>
+
+  <script
+  src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
+<script>
+
+
+window.onload = () => {
+
+var s = document.createElement("script");
+   s.type = "text/javascript";
+   s.src = "http://localhost:8080/webpack-dev-server.js";
+   // Use any selector
+   $("head").append(s);
+
+var t = document.createElement("script");
+  t.type = "text/javascript";
+  t.src = "http://localhost:8080/build/app.bundle.js";
+  // Use any selector
+  $("head").append(t);
+
+}
+</script>
+
+<script>
+  try {
+      $ = jQuery = module.exports;
+      // If you want module.exports to be empty, uncomment:
+      // module.exports = {};
+  } catch(e) {}
+</script>
+
 </head>
 <body>
   <div id="app"></div>
-  <script>
-    (function() {
-      const script = document.createElement('script');
-      script.src = process.env.ENV === 'development' ? 'http://localhost:8080/webpack-dev-server.js' : '';
-      document.write(script.outerHTML);
-    }());
-  </script>
-    <script>
-    (function() {
-      const script = document.createElement('script');
-      script.src = process.env.ENV === 'development' ? 'http://localhost:8080/build/app.bundle.js' : './build/app.bundle.js';
-      document.write(script.outerHTML);
-    }());
-  </script>
+
 </body>
 </html>
